# gto

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  main.py  pyproject.toml  registry.py  requirements.txt  setup.cfg  setup.py  setup.sh  showcase.sh  tag.py
.github/workflows/: check-test-release.yml  main.yml
gitops/: __init__.py  base.py  branch.py  cli.py  commit.py  config.py  constants.py  exceptions.py  index.py  registry.py  tag.py  utils.py  versions.py
gto/: __init__.py  _pydantic.py  _version.py  api.py  base.py  branch.py  cli.py  commit.py  commit_message_generator.py  config.py  constants.py  exceptions.py  ext.py  ext_dvc.py  ext_mlem.py  git_utils.py  index.py  log.py  registry.py  tag.py  ui.py  utils.py  versions.py
tests/: conftest.py  skip_presets.py  test_api.py  test_cli.py  test_config.py  test_constants.py  test_git_utils.py  test_index.py  test_registry.py  test_showcase.py  test_tag.py  test_versions.py  utils.py
tests/api/: test_show.py
tests/api/data/: __init__.py  sample_remote_repo_expected_registry.json
tests/data/: remote_repositories.py
tests/git_utils/: test_git_clone.py  test_git_clone_if_repo_is_remote.py  test_is_url_to_remote_repo.py
tests/git_utils/data/: __init__.py  remote_repositories.py
tests/resources/: __init__.py  sample_remote_repo_expected_history_churn.json  sample_remote_repo_expected_registry.json
